--- a/index.html
+++ b/index.html
@@ -134,10 +134,24 @@
     </audio>
     <script>
         const texts = [
-            "Cảm ơn vì em đã đến!",
-            "Ai lớp diu chu cà mo ♥",
-            "Anh sẽ luôn bên cạnh em ♥",
-            "Quân♥Phương"
+            "Em yêu Nhật Nguyên 🥰",
+  "Cảm ơn đã đến bên em",
+  "Em yêu anh",
+  "30/03",
+                    "Em yêu Nhật Nguyên 🥰",
+  "Cảm ơn đã đến bên em",
+  "Em yêu anh",
+  "30/03",
+    "Em yêu Nhật Nguyên 🥰",
+  "Cảm ơn đã đến bên em",
+  "Em yêu anh",
+  "30/03",
+    "Em yêu Nhật Nguyên 🥰",
+  "Cảm ơn đã đến bên em",
+  "Em yêu anh",
+  "30/03",
+
+
         ];
 
         const scene = document.getElementById("scene");
